修复因错误保存token导致的鉴权问题，现在可以流畅的订阅或点赞了

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
       "!**/*.md"
     ],
     "win": {
+      "icon": "img/favicon.ico",
       "target": [
         {
           "target": "nsis",
