--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "electron-updater": "^6.3.0"
+    "electron-updater": "^6.3.0",
+    "liquid-web": "^1.1.1"
   },
   "devDependencies": {
     "electron": "^30.0.0",
